--- a/FinanceManager/View/CreateCurrencyPage.xaml
+++ b/FinanceManager/View/CreateCurrencyPage.xaml
@@ -1,13 +1,12 @@
 ﻿<Page
-    x:Class="FinanceManager.View.CreateMoneyBoxPage"
+    x:Class="FinanceManager.View.CreateCurrencyPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:FinanceManager.View"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
-    x:Name="CreateMoneyBoxView">
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Grid x:Name="LayoutRoot">
 
@@ -26,20 +25,19 @@
         <!-- Title Panel -->
         <StackPanel Grid.Row="0" Margin="19,0,0,0">
             <TextBlock Text="finance manager" Style="{ThemeResource TitleTextBlockStyle}" Margin="0,12,0,0"/>
-            <TextBlock Text="new money box" Margin="0,-6.5,0,26.5" Style="{ThemeResource HeaderTextBlockStyle}" CharacterSpacing="{ThemeResource PivotHeaderItemCharacterSpacing}" FontSize="48"/>
+            <TextBlock Text="new currency" Margin="0,-6.5,0,26.5" Style="{ThemeResource HeaderTextBlockStyle}" CharacterSpacing="{ThemeResource PivotHeaderItemCharacterSpacing}" FontSize="48"/>
         </StackPanel>
 
         <!--TODO: Content should be placed within the following grid-->
         <Grid Grid.Row="1" x:Name="ContentRoot" Margin="19,9.5,19,0">
             <StackPanel>
-                <TextBox Text="{Binding MoneyBox.Title, Mode=TwoWay}" PlaceholderText="type money box title" Header="money box title"/>
-                <ComboBox ItemsSource="{Binding Currencies}" SelectedItem="{Binding MoneyBox.PrimaryCurrency, Mode=TwoWay}" DisplayMemberPath="Title" Header="money box primary currancy" PlaceholderText="choose money box primary currancy"/>
+                <TextBox Text="{Binding Currency.Title, Mode=TwoWay}" PlaceholderText="type currency title" Header="currency title"/>
+                <TextBox Text="{Binding Currency.Symbol, Mode=TwoWay}" PlaceholderText="type currency symbol" Header="currency symbol" InputScope="CurrencyAmountAndSymbol"/>
             </StackPanel>
         </Grid>
-
         <StackPanel Orientation="Horizontal" Grid.Row="2" HorizontalAlignment="Center">
-            <AppBarButton Icon="Save" Label="save" Command="{Binding SaveMoneyBoxCommand}"/>
-            <AppBarButton Icon="Cancel" Label="cancel" Command="{Binding CancelMoneyBoxCommand}"/>
+            <AppBarButton Icon="Save" Label="save" Command="{Binding SaveCurrencyCommand}"/>
+            <AppBarButton Icon="Cancel" Label="cancel" Command="{Binding CancelCurrencyCommand}"/>
         </StackPanel>
     </Grid>
 </Page>
