--- a/FinanceManager/View/MoneyBoxPage.xaml
+++ b/FinanceManager/View/MoneyBoxPage.xaml
@@ -1,122 +1,149 @@
-﻿<Page
+﻿<Page xmlns:Charting="using:WinRTXamlToolkit.Controls.DataVisualization.Charting" 
     x:Class="FinanceManager.View.MoneyBoxPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:FinanceManager.View"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:datavischart="using:WinRTXamlToolkit.Controls.DataVisualization.Charting"
+    xmlns:datavis="using:WinRTXamlToolkit.Controls.DataVisualization"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-    <!-- Application bottom command bar -->
-    <Page.BottomAppBar>
-        <CommandBar>
-            <CommandBar.PrimaryCommands>
-                <AppBarButton Icon="Add" Label="income" Command="{Binding CreateIncomeCommand}"/>
-                <AppBarButton Icon="Remove" Label="expence" Command="{Binding CreateExpenceCommand}"/>
-            </CommandBar.PrimaryCommands>
-            <CommandBar.SecondaryCommands>
-                <AppBarButton Label="view transactions"/>
-                <AppBarButton Label="detailed statistics"/>
-                <AppBarButton Label="edit money box"/>
-            </CommandBar.SecondaryCommands>
-        </CommandBar>
-    </Page.BottomAppBar>
-    
     <Grid x:Name="LayoutRoot">
+        <Pivot Title="finance manager">
+            <PivotItem Header="money box">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+                    <StackPanel Orientation="Vertical">
+                        
+                        <StackPanel Orientation="Vertical">
+                            <TextBlock Text="title" FontSize="18" Foreground="{ThemeResource ListBoxItemDisabledForegroundThemeBrush}"/>
+                            <TextBlock Text="{Binding MoneyBox.Title}" FontSize="32"/>
+                        </StackPanel>
 
-        <Grid.ChildrenTransitions>
-            <TransitionCollection>
-                <EntranceThemeTransition/>
-            </TransitionCollection>
-        </Grid.ChildrenTransitions>
+                        <StackPanel Orientation="Vertical">
+                            <TextBlock Text="created" FontSize="18" Margin="0,5,0,0" Foreground="{ThemeResource ListBoxItemDisabledForegroundThemeBrush}"/>
+                            <TextBlock Text="{Binding MoneyBox.CreationDate}" FontSize="32"/>
+                        </StackPanel>
 
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
+                        <StackPanel Orientation="Vertical">
+                            <TextBlock Text="last modified" FontSize="18" Margin="0,5,0,0" Foreground="{ThemeResource ListBoxItemDisabledForegroundThemeBrush}"/>
+                            <TextBlock Text="{Binding MoneyBox.LastModifiedDate}" FontSize="32"/>
+                        </StackPanel>
 
-        <!-- Title Panel -->
-        <StackPanel Grid.Row="0" Margin="19,0,0,0">
-            <TextBlock Text="finance manager" Style="{ThemeResource TitleTextBlockStyle}" Margin="0,12,0,0"/>
-            <TextBlock Text="money box" Margin="0,-6.5,0,26.5" Style="{ThemeResource HeaderTextBlockStyle}" CharacterSpacing="{ThemeResource PivotHeaderItemCharacterSpacing}" FontSize="48"/>
-        </StackPanel>
+                        <StackPanel Orientation="Vertical">
+                            <TextBlock Text="balance" FontSize="18" Margin="0,5,0,0" Foreground="{ThemeResource ListBoxItemDisabledForegroundThemeBrush}"/>
+                            <StackPanel Orientation="Horizontal">
+                                <TextBlock Text="{Binding MoneyBox.Balance}" FontSize="32"/>
+                                <TextBlock Text="&#160;" FontSize="32"/>
+                                <TextBlock Text="{Binding MoneyBox.PrimaryCurrency.Symbol}" FontSize="32"/>
+                            </StackPanel>
+                        </StackPanel>
+
+                        <StackPanel Orientation="Vertical">
+                            <TextBlock Text="total income" FontSize="18" Margin="0,5,0,0" Foreground="{ThemeResource ListBoxItemDisabledForegroundThemeBrush}"/>
+                            <StackPanel Orientation="Horizontal">
+                                <TextBlock Text="{Binding TotalIncome}" FontSize="32"/>
+                                <TextBlock Text="&#160;" FontSize="32"/>
+                                <TextBlock Text="{Binding MoneyBox.PrimaryCurrency.Symbol}" FontSize="32"/>
+                            </StackPanel>
+                        </StackPanel>
+
+                        <StackPanel Orientation="Vertical">
+                            <TextBlock Text="total expence" FontSize="18" Margin="0,5,0,0" Foreground="{ThemeResource ListBoxItemDisabledForegroundThemeBrush}"/>
+                            <StackPanel Orientation="Horizontal">
+                                <TextBlock Text="{Binding TotalExpence}" FontSize="32"/>
+                                <TextBlock Text="&#160;" FontSize="32"/>
+                                <TextBlock Text="{Binding MoneyBox.PrimaryCurrency.Symbol}" FontSize="32"/>
+                            </StackPanel>
+                        </StackPanel>
+                    </StackPanel>
+
+                    <StackPanel Orientation="Horizontal" Grid.Row="1" HorizontalAlignment="Center" >
+                        <AppBarButton Icon="Edit" Label="edit" Command="{Binding EditMoneyBoxCommand}"/>
+                    </StackPanel>
+                </Grid>
+            </PivotItem>
+            <PivotItem Header="transactions">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+                    <Pivot Grid.Row="0">
+                        <PivotItem Header="income" FontSize="48">
+                            <ListBox ItemsSource="{Binding IncomeTransactions}" SelectedItem="{Binding SelectedTransaction, Mode=TwoWay}" Background="{x:Null}" Foreground="{ThemeResource ListBoxItemSelectedForegroundThemeBrush}">
+                                <ListBox.ItemTemplate>
+                                    <DataTemplate>
+                                        <StackPanel Orientation="Vertical" Margin="0,0,0,5">
+                                            <TextBlock Text="{Binding CreationDate}" FontSize="18" Foreground="{ThemeResource ListBoxItemDisabledForegroundThemeBrush}"/>
+                                            <StackPanel Orientation="Horizontal">
+                                                <TextBlock Text="{Binding Category.Title}" FontSize="32"/>
+                                                <TextBlock Text="&#160;" FontSize="32"/>
+                                                <TextBlock Text="{Binding Value}" FontSize="32"/>
+                                                <TextBlock Text="&#160;" FontSize="32"/>
+                                                <TextBlock Text="{Binding Currency.Symbol}" FontSize="32"/>
+                                            </StackPanel>
+                                        </StackPanel>
+                                    </DataTemplate>
+                                </ListBox.ItemTemplate>
+                            </ListBox>
+                        </PivotItem>
+                        <PivotItem Header="expence" FontSize="48">
+                            <ListBox ItemsSource="{Binding ExpenceTransactions}" SelectedItem="{Binding SelectedTransaction, Mode=TwoWay}" Background="{x:Null}" Foreground="{ThemeResource ListBoxItemSelectedForegroundThemeBrush}">
+                                <ListBox.ItemTemplate>
+                                    <DataTemplate>
+                                        <StackPanel Orientation="Vertical" Margin="0,0,0,5">
+                                            <TextBlock Text="{Binding CreationDate}" FontSize="18" Foreground="{ThemeResource ListBoxItemDisabledForegroundThemeBrush}"/>
+                                            <StackPanel Orientation="Horizontal">
+                                                <TextBlock Text="{Binding Category.Title}" FontSize="32"/>
+                                                <TextBlock Text="&#160;" FontSize="32"/>
+                                                <TextBlock Text="{Binding Value}" FontSize="32"/>
+                                                <TextBlock Text="&#160;" FontSize="32"/>
+                                                <TextBlock Text="{Binding Currency.Symbol}" FontSize="32"/>
+                                            </StackPanel>
+                                        </StackPanel>
+                                    </DataTemplate>
+                                </ListBox.ItemTemplate>
+                            </ListBox>
+                        </PivotItem>
+                    </Pivot>
+                    <StackPanel Orientation="Horizontal" Grid.Row="1" HorizontalAlignment="Center">
+                        <AppBarButton Icon="Add" Label="income" Command="{Binding AddIncomeCommand}"/>
+                        <AppBarButton Icon="Remove" Label="expence" Command="{Binding AddExpenceCommand}"/>
+                        <AppBarButton Icon="Clear" Label="delete all" Command="{Binding DeleteAllTransactionsCommand}"/>
+                    </StackPanel>
+                </Grid>
+            </PivotItem>
+            <PivotItem Header="statistics">
+                <Pivot>
+                    <PivotItem Header="income">
+                        <Charting:Chart HorizontalAlignment="Center" VerticalAlignment="Center" Height="400" Width="350">
+                            <Charting:Chart.LegendStyle>
+                                <Style TargetType="datavis:Legend">
+                                    <Setter Property="Width" Value="0"/>
+                                </Style>
+                            </Charting:Chart.LegendStyle>
+                            <Charting:BarSeries ItemsSource="{Binding IncomesByCategory}" IndependentValuePath="CategoryTitle" DependentValuePath="TransactionValue"/>
+                        </Charting:Chart>
+                    </PivotItem>
+                    <PivotItem Header="expence">
+                        <Charting:Chart HorizontalAlignment="Center" VerticalAlignment="Center" Height="400" Width="350">
+                            <Charting:PieSeries ItemsSource="{Binding ExpencesByCategory}" IndependentValuePath="CategoryTitle" DependentValuePath="TransactionValue"/>
+                        </Charting:Chart>
+                    </PivotItem>
+                </Pivot>
+            </PivotItem>
+        </Pivot>
+        
 
         <!--TODO: Content should be placed within the following grid-->
         <Grid Grid.Row="1" x:Name="ContentRoot" Margin="19,9.5,19,0">
-            <StackPanel Orientation="Vertical">
-                <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="title :&#160;" FontSize="32" Foreground="{ThemeResource ListBoxItemDisabledForegroundThemeBrush}"/>
-                    <TextBlock Text="{Binding MoneyBox.Title}" FontSize="32"/>
-                </StackPanel>
-                <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="created :&#160;" FontSize="18.667" Foreground="{ThemeResource ListBoxItemDisabledForegroundThemeBrush}"/>
-                    <TextBlock Text="{Binding MoneyBox.CreationDate}" FontSize="18.667"/>
-                </StackPanel>
-                <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="last modified :&#160;" FontSize="18.667" Foreground="{ThemeResource ListBoxItemDisabledForegroundThemeBrush}"/>
-                    <TextBlock Text="{Binding MoneyBox.LastModifiedDate}" FontSize="18.667"/>
-                </StackPanel>
-                <StackPanel Orientation="Horizontal" Margin="0,20,0,0">
-                    <TextBlock Text="balance :&#160;" FontSize="32" Foreground="{ThemeResource ListBoxItemDisabledForegroundThemeBrush}"/>
-                    <TextBlock Text="{Binding MoneyBox.Balance}" FontSize="32"/>
-                    <TextBlock Text="&#160;" FontSize="32"/>
-                    <TextBlock Text="{Binding MoneyBox.PrimaryCurrency.Symbol}" FontSize="32" Foreground="{ThemeResource ListBoxItemDisabledForegroundThemeBrush}"/>
-                </StackPanel>
-                <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="total income :&#160;" FontSize="18.667" Foreground="{ThemeResource ListBoxItemDisabledForegroundThemeBrush}"/>
-                    <TextBlock Text="{Binding MoneyBox.TotalIncome}" FontSize="18.667"/>
-                    <TextBlock Text="&#160;" FontSize="18.667"/>
-                    <TextBlock Text="{Binding MoneyBox.PrimaryCurrency.Symbol}" FontSize="18.667" Foreground="{ThemeResource ListBoxItemDisabledForegroundThemeBrush}"/>
-                </StackPanel>
-                <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="total expence :&#160;" FontSize="18.667" Foreground="{ThemeResource ListBoxItemDisabledForegroundThemeBrush}"/>
-                    <TextBlock Text="{Binding MoneyBox.TotalExpence}" FontSize="18.667"/>
-                    <TextBlock Text="&#160;" FontSize="18.667"/>
-                    <TextBlock Text="{Binding MoneyBox.PrimaryCurrency.Symbol}" FontSize="18.667" Foreground="{ThemeResource ListBoxItemDisabledForegroundThemeBrush}"/>
-                </StackPanel>
-                <TextBlock Text="last transactions :" Margin="0,20,0,0" FontSize="18.667" Foreground="{ThemeResource ListBoxItemDisabledForegroundThemeBrush}"/>
-                <StackPanel Orientation="Vertical" Margin="40,5,0,0">
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="{Binding LastTransaction.Type}" FontSize="21.333" />
-                        <TextBlock Text="&#160;" FontSize="21.333"/>
-                        <TextBlock Text="{Binding LastTransaction.Value}" FontSize="21.333"/>
-                        <TextBlock Text="&#160;" FontSize="21.333"/>
-                        <TextBlock Text="{Binding LastTransaction.Currency.Symbol}" FontSize="21.333"/>
-                    </StackPanel>
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="category :&#160;" FontSize="18.667" Foreground="{ThemeResource ListBoxItemDisabledForegroundThemeBrush}"/>
-                        <TextBlock Text="{Binding LastTransaction.Category.Title}" FontSize="18.667"/>
-                    </StackPanel>
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="user :&#160;" FontSize="18.667" Foreground="{ThemeResource ListBoxItemDisabledForegroundThemeBrush}"/>
-                        <TextBlock Text="{Binding LastTransaction.User}" FontSize="18.667"/>
-                    </StackPanel>
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="date :&#160;" FontSize="18.667" Foreground="{ThemeResource ListBoxItemDisabledForegroundThemeBrush}"/>
-                        <TextBlock Text="{Binding LastTransaction.CreationDate}" FontSize="18.667"/>
-                    </StackPanel>
-                    <StackPanel Orientation="Horizontal" Margin="0,5,0,0">
-                        <TextBlock Text="{Binding PreviousTransaction.Type}" FontSize="21.333" />
-                        <TextBlock Text="&#160;" FontSize="21.333"/>
-                        <TextBlock Text="{Binding PreviousTransaction.Value}" FontSize="21.333"/>
-                        <TextBlock Text="&#160;" FontSize="21.333"/>
-                        <TextBlock Text="{Binding PreviousTransaction.Currency.Symbol}" FontSize="21.333"/>
-                    </StackPanel>
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="category :&#160;" FontSize="18.667" Foreground="{ThemeResource ListBoxItemDisabledForegroundThemeBrush}"/>
-                        <TextBlock Text="{Binding PreviousTransaction.Category.Title}" FontSize="18.667"/>
-                    </StackPanel>
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="user :&#160;" FontSize="18.667" Foreground="{ThemeResource ListBoxItemDisabledForegroundThemeBrush}"/>
-                        <TextBlock Text="{Binding PreviousTransaction.User}" FontSize="18.667"/>
-                    </StackPanel>
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="date :&#160;" FontSize="18.667" Foreground="{ThemeResource ListBoxItemDisabledForegroundThemeBrush}"/>
-                        <TextBlock Text="{Binding PreviousTransaction.CreationDate}" FontSize="18.667"/>
-                    </StackPanel>
-                </StackPanel>
-            </StackPanel>
+            
         </Grid>
     </Grid>
 </Page>
