--- a/FinanceManager/View/MainPage.xaml
+++ b/FinanceManager/View/MainPage.xaml
@@ -3,6 +3,9 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:FinanceManager.View"
+    xmlns:i="using:Microsoft.Xaml.Interactivity"
+    xmlns:core="using:Microsoft.Xaml.Interactions.Core"
+    xmlns:act="using:FinanceManager.View.Actions"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:conv="using:FinanceManager.View.Converters"
@@ -12,6 +15,8 @@
 
     <Page.Resources>
         <conv:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
+        <conv:SelectedToForegroundConverter x:Key="SelectedToForegroundConverter"/>
+        <conv:SelectedToStringConverter x:Key="SelectedToStringConverter"/>
     </Page.Resources>
 
     <Page.BottomAppBar>
@@ -23,6 +28,7 @@
                 <AppBarButton Icon="Add" Label="create new" Command="{Binding CreateCategoryCommand}" Visibility="{Binding CategoriesCommandBarVisible, Converter={StaticResource BoolToVisibilityConverter}}"/>
             </CommandBar.PrimaryCommands>
             <CommandBar.SecondaryCommands>
+                <AppBarButton Label="delete selected" Command="{Binding DeleteSelectedMoneyBoxesCommand}" Visibility="{Binding MoneyBoxesCommandBarVisible, Converter={StaticResource BoolToVisibilityConverter}}"/>
                 <AppBarButton Label="delete all" Command="{Binding DeleteAllMoneyBoxesCommand}" Visibility="{Binding MoneyBoxesCommandBarVisible, Converter={StaticResource BoolToVisibilityConverter}}"/>
                 <AppBarButton Label="delete all" Command="{Binding DeleteAllUsersCommand}" Visibility="{Binding UsersCommandBarVisible, Converter={StaticResource BoolToVisibilityConverter}}"/>
                 <AppBarButton Label="delete all" Command="{Binding DeleteAllCurrenciesCommand}" Visibility="{Binding CurrenciesCommandBarVisible, Converter={StaticResource BoolToVisibilityConverter}}"/>
@@ -34,11 +40,30 @@
     <Grid x:Name="LayoutRoot">
         <Pivot Title="finance manager" SelectedIndex="{Binding SelectedPivotItem, Mode=TwoWay}">
             <PivotItem Header="money boxes">
-                <ListBox x:Name="listMoneyBoxes" ItemsSource="{Binding MoneyBoxes}" SelectedItem="{Binding SelectedMoneyBox, Mode=TwoWay}" Background="{x:Null}" Foreground="{ThemeResource ListBoxItemSelectedForegroundThemeBrush}">
+                <ListBox x:Name="listMoneyBoxes" ItemsSource="{Binding MoneyBoxes}" SelectionMode="Extended" SelectedItem="{Binding SelectedMoneyBox, Mode=TwoWay}" IsHoldingEnabled="True" IsRightTapEnabled="True" Background="{x:Null}" Foreground="{ThemeResource ListBoxItemSelectedForegroundThemeBrush}">
                     <ListBox.ItemTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Vertical">
-                                <TextBlock Text="{Binding Title}" FontSize="32"/>
+                                <i:Interaction.Behaviors>
+                                    <core:EventTriggerBehavior EventName="Holding">
+                                        <act:OpenMenuFlyoutAction/>
+                                    </core:EventTriggerBehavior>
+                                </i:Interaction.Behaviors>
+                                <FlyoutBase.AttachedFlyout>
+                                    <MenuFlyout>
+                                        <ToggleMenuFlyoutItem 
+                                            x:Name="selectCommand" 
+                                            Text="{Binding ElementName=selectCommand, Path=IsChecked, Converter={StaticResource SelectedToStringConverter}}"
+                                            Command="{Binding DataContext.SelectMoneyBoxCommand, ElementName=MainView}" 
+                                            CommandParameter="{Binding}"/>
+                                        <MenuFlyoutItem 
+                                            Text="delete" 
+                                            Command="{Binding DataContext.DeleteMoneyBoxCommand, ElementName=MainView}" 
+                                            CommandParameter="{Binding}"/>
+                                    </MenuFlyout>
+                                </FlyoutBase.AttachedFlyout>
+                                <TextBlock Grid.Column="0" Text="{Binding Title}" FontSize="32" Foreground="{Binding ElementName=selectCommand, Path=IsChecked, Converter={StaticResource SelectedToForegroundConverter}}"/>
+                                <TextBlock Foreground="{ThemeResource PhoneAccentBrush}"/>
                             </StackPanel>
                         </DataTemplate>
                     </ListBox.ItemTemplate>
